--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
     <footer class="footer mb-4">
       <div class="container">
         <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
+        <br>
+        <img src="img/internet-radio-badge.gif" alt="Internet Radio">
       </div>
     </footer>
 
