Adicionado link para a página Internet Radio

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="container">
         <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
         <br>
-        <img src="img/internet-radio-badge.gif" alt="Internet Radio">
+        <a href="http://www.internet-radio.com"><img src="img/internet-radio-badge.gif" alt="Internet Radio"></a>
       </div>
     </footer>
 
