Adicionada visualização da música seguinte

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
     <!-- A TOCAR -->
     <div class="jumbotron">
       <div class="container">
+        <!-- LINHA -->
         <div class="row">
-          <div class="col-auto">
+          <!-- CAPA -->
+          <div class="col-2">
             <img src="" width="110px" id="imagem" class="rounded img-fluid" />
           </div>
-          <div class="col-auto">
+          <!-- METADADOS-->
+          <div class="col-4">
             <h4><span id="status" class="status badge badge-danger"></span></h4>
             <h5><span id="dj" class="badge badge-primary"></span></h5>
             <h4 id="musica" class="font-weight-bold"></h4>
@@ -68,6 +71,19 @@
                 value="0.2"
               />
             </div>
+          </div>
+          <div class="col-2">
+            <img
+              src=""
+              width="110px"
+              id="imagem-seguinte"
+              class="rounded img-fluid"
+            />
+          </div>
+          <div class="col-4">
+            <h4><span class="badge badge-warning">Vai Tocar</span></h4>
+            <h4 id="musica-seguinte" class="font-weight-bold"></h4>
+            <h5 id="artista-seguinte"></h5>
           </div>
         </div>
       </div>
