--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
         <!-- LINHA -->
         <div class="row">
           <!-- CAPA -->
-          <div class="col-2">
+          <div class="col-auto">
             <img src="" width="110px" id="imagem" class="rounded img-fluid" />
           </div>
           <!-- METADADOS-->
-          <div class="col-4">
-            <h4><span id="status" class="status badge badge-danger"></span></h4>
+          <div class="col-5">
+            <h4>
+              <!-- STATUS-->
+              <span id="status" class="status badge badge-danger"></span>
+            </h4>
             <h5><span id="dj" class="badge badge-primary"></span></h5>
             <h4 id="musica" class="font-weight-bold"></h4>
             <h5 id="artista"></h5>
@@ -72,7 +75,9 @@
               />
             </div>
           </div>
-          <div class="col-2">
+          <!-- VAI TOCAR -->
+          <!-- CAPA -->
+          <div class="col-auto">
             <img
               src=""
               width="110px"
@@ -80,8 +85,11 @@
               class="rounded img-fluid"
             />
           </div>
-          <div class="col-4">
-            <h4><span class="badge badge-warning">Vai Tocar</span></h4>
+          <!-- METADADOS -->
+          <div class="col-auto">
+            <h4>
+              <span class="badge badge-warning">Vai Tocar</span>
+            </h4>
             <h4 id="musica-seguinte" class="font-weight-bold"></h4>
             <h5 id="artista-seguinte"></h5>
           </div>
@@ -239,15 +247,12 @@
     <!-- FOOTER -->
     <footer class="footer mb-4">
       <div class="container">
-        <span class="text-muted"
-          ><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span
-        >
+        <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
       </div>
     </footer>
 
     <!-- BIBLIOTECAS -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/popper.min.js"></script>
 
     <!-- SCRIPTS JAVASCRIPT -->
     <script src="js/nowplaying.js"></script>
