--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
           </p>
           <h3>Horário</h3>
           <div class="my-4"></div>
-          <strong>07h00 às 21h00</strong> - A melhor música!
+          <strong>04h às 22h</strong> - Música Variada
           <div class="mt-2 mb-2"></div>
-          <strong>21h00 às 7h00</strong> - Synthwave Dawn
+          <strong>22h às 04h</strong> - Synthwave
         </div>
         <!-- FICHEIROS -->
         <div class="col-sm">
