--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="row">
         <!-- SOBRE -->
-        <div class="col-sm">
+        <div class="col-md">
           <h3 id="sobre">Sobre</h3>
           <div class="my-4"></div>
           <p>
@@ -119,7 +119,7 @@
           <strong>22h às 04h</strong> - Synthwave
         </div>
         <!-- FICHEIROS -->
-        <div class="col-sm">
+        <div class="col-md">
           <h3 id="ouvir">Ouvir</h3>
           <div class="my-4"></div>
           <!-- M3U -->
@@ -156,7 +156,7 @@
         </p>
         <div class="row">
           <!-- FORMULÁRIO CONTATO-->
-          <div class="p-4 col-sm">
+          <div class="p-4 col-md">
             <h4>Formulário de contato</h4>
             <form name="contatos" method="POST" data-netlify="true">
               <div class="form-group">
@@ -202,7 +202,8 @@
               <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
           </div>
-          <div class="p-4 col-sm">
+          <!-- REDES SOCIAIS-->
+          <div class="p-4 col-md">
             <h4>Redes sociais</h4>
             <div class="mt-4"></div>
             <!-- DISCORD -->
@@ -220,7 +221,7 @@
                   </p>
                 </div>
               </div>
-              <div class="mr-3 ml-3"></div>
+              <div class="mx-3"></div>
               <!-- FACEBOOK -->
               <div class="card border-primary mb-3" style="max-width: 20rem;">
                 <div class="card-header">
@@ -247,7 +248,9 @@
     <!-- FOOTER -->
     <footer class="footer mb-4">
       <div class="container">
-        <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
+        <span class="text-muted"
+          ><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span
+        >
       </div>
     </footer>
 
