Corrigida responsividade nas Redes Sociais

--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
         <div class="row">
           <!-- FORMULÁRIO CONTATO-->
           <div class="p-4 col-md">
-            <h4>Formulário de contato</h4>
             <form name="contatos" method="POST" data-netlify="true">
               <div class="form-group">
                 <label>Nome</label>
@@ -204,39 +203,49 @@
           </div>
           <!-- REDES SOCIAIS-->
           <div class="p-4 col-md">
-            <h4>Redes sociais</h4>
             <div class="mt-4"></div>
             <!-- DISCORD -->
-            <div class="text-center d-flex justify-content-center">
-              <div class="card border-primary mb-3" style="max-width: 20rem;">
-                <div class="card-header">
-                  <a href="https://discord.gg/dm8Ze7z" target="_blank">
-                    <i style="color: #ffffff;" class="fab fa-discord fa-3x"></i>
-                  </a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text">
-                    O nosso servidor Discord, onde poderás ouvir a tua rádio e
-                    estar dentro de todas as notícias.
-                  </p>
+            <div class="row">
+              <div class="col-auto">
+                <div class="text-center d-flex justify-content-center">
+                  <div class="card border-primary mb-3">
+                    <div class="card-header">
+                      <a href="https://discord.gg/dm8Ze7z" target="_blank">
+                        <i
+                          style="color: #ffffff;"
+                          class="fab fa-discord fa-3x"
+                        ></i>
+                      </a>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        O nosso servidor Discord, onde poderás ouvir a tua rádio
+                        e estar dentro de todas as notícias.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="mx-3"></div>
               <!-- FACEBOOK -->
-              <div class="card border-primary mb-3" style="max-width: 20rem;">
-                <div class="card-header">
-                  <a href="#!">
-                    <i
-                      style="color: #ffffff;"
-                      class="fab fa-facebook fa-3x"
-                    ></i>
-                  </a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text">
-                    A nossa página Facebook, onde informaremos todos os eventos
-                    da tua rádio.<br /><strong>(em breve)</strong>
-                  </p>
+              <div class="col-auto">
+                <div class="text-center d-flex justify-content-center">
+                  <div class="card border-primary mb-3">
+                    <div class="card-header">
+                      <a href="#!">
+                        <i
+                          style="color: #ffffff;"
+                          class="fab fa-facebook fa-3x"
+                        ></i>
+                      </a>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        A nossa página Facebook, onde informaremos todos os
+                        eventos da tua rádio.<br /><strong>(em breve)</strong>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
