--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- SOBRE -->
         <div class="col-md">
           <h3 id="sobre">Sobre</h3>
-          <div class="my-4"></div>
+          <div class="my-2"></div>
           <p>
             A Rádio Afonso Santos surgiu em 2018, e começou com um hobby de um
             jovem com gosto pela rádio e as tecnologias que fazem a rádio
@@ -113,10 +113,22 @@
             no fundo da página.
           </p>
           <h3>Horário</h3>
-          <div class="my-4"></div>
-          <strong>04h às 22h</strong> - Música Variada
-          <div class="mt-2 mb-2"></div>
-          <strong>22h às 04h</strong> - Synthwave
+          <div class="mt-2"></div>
+          <ul class="list-group">
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              Música Variada
+              <span class="badge badge-primary badge-pill">4h às 22h</span>
+            </li>
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              Synthwave
+              <span class="badge badge-primary badge-pill">22h às 4h</span>
+            </li>
+          </ul>
+          <div class="mb-2"></div>
         </div>
         <!-- FICHEIROS -->
         <div class="col-md">
