Adicionada classe ao texto Sobre

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="col-md">
           <h3 id="sobre">Sobre</h3>
           <div class="my-2"></div>
-          <p>
+          <p class="text-justify">
             A Rádio Afonso Santos surgiu em 2018, e começou com um hobby de um
             jovem com gosto pela rádio e as tecnologias que fazem a rádio
             funcionar. Hoje em dia, apesar de continuar a ser um hobby, a Rádio
