Removida folha de estilos desnecessária; Adicionado FancyBox 3

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- ESTILOS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+
+    <!-- SCRIPTS -->
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="https://kit.fontawesome.com/dbee1ad334.js"></script>
+
     <title>Rádio Afonso Santos</title>
   </head>
   <body>
@@ -275,10 +282,8 @@
       </div>
     </footer>
 
-    <!-- BIBLIOTECAS -->
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-    <!-- SCRIPTS JAVASCRIPT -->
     <script src="js/nowplaying.js"></script>
     <script src="js/player.js"></script>
   </body>
