jQuery local; Integração FancyBox

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         <div class="row">
           <!-- CAPA -->
           <div class="col-auto">
-            <img src="" width="110px" id="imagem" class="rounded img-fluid" />
+            <a data-fancybox="gallery" href="" id="imagem-grande">
+              <img
+                src=""
+                width="110px"
+                id="imagem-pequena"
+                class="rounded img-fluid"
+              />
+            </a>
           </div>
           <!-- METADADOS-->
           <div class="col-5">
@@ -85,12 +92,14 @@
           <!-- VAI TOCAR -->
           <!-- CAPA -->
           <div class="col-auto">
-            <img
-              src=""
-              width="110px"
-              id="imagem-seguinte"
-              class="rounded img-fluid"
-            />
+            <a data-fancybox="gallery" href="" id="imagem-seguinte-grande">
+              <img
+                src=""
+                width="110px"
+                id="imagem-seguinte-pequena"
+                class="rounded img-fluid"
+              />
+            </a>
           </div>
           <!-- METADADOS -->
           <div class="col-auto">
@@ -283,8 +292,18 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/nowplaying.js"></script>
     <script src="js/player.js"></script>
+
+    <!-- CONFIGURAÇÃO FANCYBOX -->
+    <script>
+      $('[data-fancybox="gallery"]').fancybox({
+        arrows: false,
+        infobar: false,
+        toolbar: false,
+        buttons: ['close', 'zoom']
+      });
+    </script>
   </body>
 </html>
