Removio FancyBox devido a incompatiblidade com o código atual

--- a/index.html
+++ b/index.html
@@ -50,14 +50,7 @@
         <div class="row">
           <!-- CAPA -->
           <div class="col-auto">
-            <a data-fancybox="gallery" href="" id="imagem-grande">
-              <img
-                src=""
-                width="110px"
-                id="imagem-pequena"
-                class="rounded img-fluid"
-              />
-            </a>
+            <img src="" width="110px" id="imagem" class="rounded img-fluid" />
           </div>
           <!-- METADADOS-->
           <div class="col-5">
@@ -92,14 +85,12 @@
           <!-- VAI TOCAR -->
           <!-- CAPA -->
           <div class="col-auto">
-            <a data-fancybox="gallery" href="" id="imagem-seguinte-grande">
-              <img
-                src=""
-                width="110px"
-                id="imagem-seguinte-pequena"
-                class="rounded img-fluid"
-              />
-            </a>
+            <img
+              src=""
+              width="110px"
+              id="imagem-seguinte"
+              class="rounded img-fluid"
+            />
           </div>
           <!-- METADADOS -->
           <div class="col-auto">
@@ -295,15 +286,5 @@
     <script src="js/jquery.js"></script>
     <script src="js/nowplaying.js"></script>
     <script src="js/player.js"></script>
-
-    <!-- CONFIGURAÇÃO FANCYBOX -->
-    <script>
-      $('[data-fancybox="gallery"]').fancybox({
-        arrows: false,
-        infobar: false,
-        toolbar: false,
-        buttons: ['close', 'zoom']
-      });
-    </script>
   </body>
 </html>
