Removido Facebook e adicionado Endereço de Email

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                       <a href="https://discord.gg/dm8Ze7z" target="_blank">
                         <i
                           style="color: #ffffff;"
-                          class="fab fa-discord fa-3x"
+                          class="fab fa-discord fa-4x"
                         ></i>
                       </a>
                     </div>
@@ -251,17 +251,16 @@
                 <div class="text-center d-flex justify-content-center">
                   <div class="card border-primary mb-3">
                     <div class="card-header">
-                      <a href="#!">
+                      <a href="mailto:afonso@radio-afonsosantos.tk">
                         <i
                           style="color: #ffffff;"
-                          class="fab fa-facebook fa-3x"
+                          class="fas fa-envelope fa-4x"
                         ></i>
                       </a>
                     </div>
                     <div class="card-body">
                       <p class="card-text">
-                        A nossa página Facebook, onde informaremos todos os
-                        eventos da tua rádio.<br /><strong>(em breve)</strong>
+                        O email alternativo ao formulário ao lado, caso ainda gostes de escrever emails.<br /><strong>afonso@radio-afonsosantos.tk</strong>
                       </p>
                     </div>
                   </div>
