Trocado $get por nChan, apara obtenção de dados mais rápida

--- a/index.html
+++ b/index.html
@@ -260,7 +260,10 @@
                     </div>
                     <div class="card-body">
                       <p class="card-text">
-                        O email alternativo ao formulário ao lado, caso ainda gostes de escrever emails.<br /><strong>afonso@radio-afonsosantos.tk</strong>
+                        O email alternativo ao formulário ao lado, caso ainda
+                        gostes de escrever emails.<br /><strong
+                          >afonso@radio-afonsosantos.tk</strong
+                        >
                       </p>
                     </div>
                   </div>
