--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 
     <!-- ESTILOS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
 
     <!-- SCRIPTS -->
-    <script src="js/jquery.fancybox.min.js"></script>
     <script src="https://kit.fontawesome.com/dbee1ad334.js"></script>
 
     <title>Rádio Afonso Santos</title>
@@ -286,6 +284,7 @@
 
     <!-- SCRIPTS -->
     <script src="js/jquery.js"></script>
+    <script src="js/NchanSubscriber.js"></script>
     <script src="js/nowplaying.js"></script>
     <script src="js/player.js"></script>
   </body>
