Ocultar informação do Vai Tocar quando um DJ está ao vivo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div class="col-auto">
+          <div id="vai-tocar-1" class="col-auto">
             <img
               src=""
               width="110px"
@@ -91,7 +91,7 @@
             />
           </div>
           <!-- METADADOS -->
-          <div class="col-auto">
+          <div id="vai-tocar-2" class="col-auto">
             <h4>
               <span class="badge badge-warning">Vai Tocar</span>
             </h4>
