Removido ID desnecessário

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div id="vai-tocar-1" class="col-auto">
+          <div class="col-auto">
             <img
               src=""
               width="110px"
