Removido outro ID desnecessário

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             />
           </div>
           <!-- METADADOS -->
-          <div id="vai-tocar-2" class="col-auto">
+          <div class="col-auto">
             <h4>
               <span class="badge badge-warning">Vai Tocar</span>
             </h4>
