Mudanças na responsividade do site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- LINHA -->
         <div class="row">
           <!-- CAPA -->
-          <div class="col-auto">
+          <div class="col">
             <img src="" width="110px" id="imagem" class="rounded img-fluid" />
           </div>
           <!-- METADADOS-->
@@ -62,27 +62,25 @@
             <!-- REPRODUTOR -->
             <audio id="reprodutor" preload="none"></audio>
             <!-- CONTROLOS REPRODUTOR -->
-            <div>
-              <div class="my-4"></div>
-              <button type="button" id="reproduzir" class="btn btn-transparent">
-                <i class="fas fa-play-circle fa-lg"></i>
-              </button>
-              <button type="button" id="parar" class="btn btn-transparent">
-                <i class="fas fa-pause-circle fa-lg"></i>
-              </button>
-              <input
-                type="range"
-                id="volume"
-                min="0"
-                max="1"
-                step="0.1"
-                value="0.2"
-              />
-            </div>
+            <div class="my-4"></div>
+            <button type="button" id="reproduzir" class="btn btn-transparent">
+              <i class="fas fa-play-circle fa-lg"></i>
+            </button>
+            <button type="button" id="parar" class="btn btn-transparent">
+              <i class="fas fa-pause-circle fa-lg"></i>
+            </button>
+            <input
+              type="range"
+              id="volume"
+              min="0"
+              max="1"
+              step="0.1"
+              value="0.2"
+            />
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div class="col-auto">
+          <div class="col">
             <img
               src=""
               width="110px"
@@ -91,7 +89,7 @@
             />
           </div>
           <!-- METADADOS -->
-          <div class="col-auto">
+          <div class="col-4">
             <h4>
               <span class="badge badge-warning">Vai Tocar</span>
             </h4>
