--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <link rel="icon" href="favicon.png">
+    
     <!-- ESTILOS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 
