Mudado var para const; Adicionado atributo ao horário

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="favicon.png">
-    
+    <link rel="icon" href="favicon.png" />
+
     <!-- ESTILOS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 
@@ -121,12 +121,14 @@
           <ul class="list-group">
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
+              data-hora="04:00"
             >
               Música Variada
               <span class="badge badge-primary badge-pill">4h às 22h</span>
             </li>
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
+              data-hora="23:00"
             >
               Synthwave
               <span class="badge badge-primary badge-pill">22h às 4h</span>
