Adicionado mecanismo da hora para adição de classe

--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
           <ul class="list-group">
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
-              data-hora="04:00"
+              id="playlist-variada"
             >
               Música Variada
-              <span class="badge badge-primary badge-pill">4h às 22h</span>
+              <span class="badge badge-primary badge-pill">4h às 23h</span>
             </li>
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
-              data-hora="23:00"
+              id="playlist-synthwave"
             >
               Synthwave
-              <span class="badge badge-primary badge-pill">22h às 4h</span>
+              <span class="badge badge-primary badge-pill">23h às 4h</span>
             </li>
           </ul>
           <div class="mb-2"></div>
