Esconder o Vai Tocar quando um DJ está ao vivo; Identificar a plsylist atual com base na API

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div class="col">
+          <div class="col" id="vai-tocar-1">
             <img
               src=""
               width="110px"
@@ -90,7 +90,7 @@
             />
           </div>
           <!-- METADADOS -->
-          <div class="col-4">
+          <div class="col-4" id="vai-tocar-2">
             <h4>
               <span class="badge badge-warning">Vai Tocar</span>
             </h4>
