Pequena alteração no cabeçalho dos ficheiros

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-  Página inicial do website para a
+  Página inicial do website da
   Rádio Afonso Santos
  
   Website para a Rádio Afonso Santos
