Remodelada secção dos ficheiros de playlist

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
         </div>
       </div>
     </div>
-    <!-- SOBRE E FICHEIROS PLAYLIST -->
+    <!-- SOBRE, FICHEIROS PLAYLIST E PEDIDO DE MUSICAS -->
     <div class="container">
       <div class="row">
         <!-- SOBRE -->
         <div class="col-md">
-          <h3 id="sobre">Sobre</h3>
+          <h3>Sobre</h3>
           <div class="my-2"></div>
           <p class="text-justify">
             A Rádio Afonso Santos surgiu em 2018, e começou com um hobby de um
@@ -136,28 +136,23 @@
           </ul>
           <div class="mb-2"></div>
         </div>
-        <!-- FICHEIROS -->
+        <!-- FICHEIROS E PEDIDO DE MUSICAS -->
         <div class="col-md">
-          <h3 id="ouvir">Ouvir</h3>
+          <!-- FICHEIROS -->
+          <h3>Ficheiros Playlist</h3>
           <div class="my-4"></div>
-          <!-- M3U -->
-          <h4>Ficheiro <span class="badge badge-dark">M3U</span></h4>
+          <h4>Ficheiro <span class="badge badge-dark">M3U</span> & <span class="badge badge-dark">PLS</span></h4>
           <p>
-            Utilize este ficheiro em qualquer reprodutor suportado, como o seu
-            carro, app, etc.
+            Utilize este ficheiros para ouvir a Rádio Afonso Santos num reprodutor multimédia como o VLC, uma app móvel, etc.
           </p>
           <a href="https://painel.radio-afonsosantos.tk/public/1/playlist/m3u">
             <button type="button" class="btn btn-primary">
-              <i class="fas fa-download mr-1"></i> Transferir
+              <i class="fas fa-download mr-1"></i> M3U
             </button>
           </a>
-          <div class="my-4"></div>
-          <!-- PLS -->
-          <h4>Ficheiro <span class="badge badge-dark">PLS</span></h4>
-          <p>Um formato menos utilizado, mas que poderá ser útil.</p>
           <a href="https://painel.radio-afonsosantos.tk/public/1/playlist/pls">
             <button type="button" class="btn btn-primary">
-              <i class="fas fa-download mr-1"></i> Transferir
+              <i class="fas fa-download mr-1"></i> PLS
             </button>
           </a>
         </div>
@@ -167,7 +162,7 @@
     <div class="my-4"></div>
     <div class="jumbotron">
       <div class="container">
-        <h3 id="contatos">Contatos</h3>
+        <h3>Contatos</h3>
         <p>
           Utilize o formulário ou as redes sociais abaixo para contactar a Rádio
           Afonso Santos, independentemente do assunto
