Alterado tamanho do modal (popup)

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
     <!-- MODAL DO PEDIDO DE NOVA MÚSICA -->
     <div class="modal fade" id="pedidos">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <!-- CABEÇALHO -->
           <div class="modal-header">
