Aumentado tamanho do modal (popup)

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
     <!-- POPUP DO PEDIDOS DE MÚSICAS -->
     <div class="modal fade" id="pedidos">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog modal-xl">
         <div class="modal-content">
           <!-- CABEÇALHO -->
           <div class="modal-header">
