Alterado texto da secção Sobre

--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
             jovem com gosto pela rádio e as tecnologias que fazem a rádio
             funcionar. Hoje em dia, apesar de continuar a ser um hobby, a Rádio
             Afonso Santos já está online 24/7 com uma transmissão contínua da
-            melhor música. Ocasionalmente, DJ's revelam os seus talentos na
-            nossa rádio, por isso fica atento às nossas redes sociais, listadas
-            no fundo da página.
+            melhor música. Ocasionalmente, eventos ao vivo podem acontecer, por
+            isso fique atento so servidor Discord, no fundo da página.
           </p>
           <h3>Horário</h3>
           <div class="mt-2"></div>
@@ -251,8 +250,8 @@
                     </div>
                     <div class="card-body">
                       <p class="card-text">
-                        O nosso servidor Discord, onde poderás ouvir a tua rádio
-                        e estar dentro de todas as notícias.
+                        O nosso servidor Discord, onde poderá ouvir a nossa
+                        rádio e estar dentro de todas as notícias.
                       </p>
                     </div>
                   </div>
@@ -273,8 +272,8 @@
                     </div>
                     <div class="card-body">
                       <p class="card-text">
-                        O email alternativo ao formulário ao lado, caso ainda
-                        gostes de escrever emails.<br /><strong
+                        O email alternativo ao formulário ao lado, caso prefira
+                        escrever um email.<br /><strong
                           >afonso@radio-afonsosantos.tk</strong
                         >
                       </p>
