Alteração da posuição do código do modal (popup); Font Awesome hospedada em conjunto com o projeto

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="favicon.png" />
 
-    <!-- ESTILOS -->
+    <!-- ESTILOS E FONTE AWESOME -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-
-    <!-- SCRIPTS -->
-    <script src="https://kit.fontawesome.com/dbee1ad334.js"></script>
+    <link rel="stylesheet" href="vendor/font-awesome/css/all.css">
 
     <title>Rádio Afonso Santos</title>
   </head>
@@ -287,6 +285,22 @@
       </div>
     </div>
 
+    <!-- FOOTER -->
+    <footer class="footer mb-4">
+      <div class="container">
+        <span class="text-muted"
+          ><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span
+        >
+      </div>
+    </footer>
+
+    <!-- SCRIPTS -->
+    <script src="js/jquery.js"></script>
+    <script src="js/NchanSubscriber.js"></script>
+    <script src="js/nowplaying.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
     <!-- POPUP DO PEDIDOS DE MÚSICAS -->
     <div class="modal fade" id="pedidos">
       <div class="modal-dialog modal-xl">
@@ -311,21 +325,5 @@
         </div>
       </div>
     </div>
-
-    <!-- FOOTER -->
-    <footer class="footer mb-4">
-      <div class="container">
-        <span class="text-muted"
-          ><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span
-        >
-      </div>
-    </footer>
-
-    <!-- SCRIPTS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/NchanSubscriber.js"></script>
-    <script src="js/nowplaying.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
