Adicionada etiqueta "Novo!" ao formulário de pedido de música

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- ESTILOS E FONTE AWESOME -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="vendor/font-awesome/css/all.css">
+    <link rel="stylesheet" href="vendor/font-awesome/css/all.css" />
 
     <title>Rádio Afonso Santos</title>
   </head>
@@ -160,6 +160,7 @@
           <div class="my-4"></div>
           <h3>Pedido de Música</h3>
           <p class="text-justify">
+            <span class="badge badge-danger">Novo!</span>
             Clica no botão abaixo para pedir que uma música da nossa biblioteca
             seja reproduzida na Rádio Afonso Santos.
           </p>
