--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
             isso fique atento so servidor Discord, no fundo da página.
           </p>
           <h3>Horário</h3>
-          <div class="mt-2"></div>
+          <div class="my-2"></div>
+          <p class="text-justify">
+              <span class="badge badge-danger">Novo!</span>
+              A playlist que está ao vivo na rádio irá ficar selecionada, desde a sua hora de início até ao final da programação.
+            </p>
           <ul class="list-group">
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
